# zebrands-challenge

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  initialization_script.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 69453620852f_setup.py
app/: auth.py  config.py
app/domain/brand/: __init__.py  brand.py  brand_exception.py
app/domain/product/: __init__.py  product.py  product_exception.py  product_repository.py
app/domain/product_consult/: __init__.py  product_consult.py  product_consult_exception.py  product_consult_repository.py
app/domain/user/: __init__.py  user.py  user_exception.py  user_repository.py
app/infrastructure/postgres/: database.py
app/interface_adapters/security/: __init__.py  jwt_access_token_manager.py
app/interface_adapters/session/: session_manager.py
app/presentation/routers/: auth.py  brand.py  product.py  product_consult.py  user.py
app/usecase/brand/: __init__.py  brand_query_model.py  brand_query_service.py  brand_query_usecase.py
app/usecase/product/: __init__.py  product_command_model.py  product_command_usecase.py  product_query_model.py  product_query_service.py  product_query_usecase.py
app/usecase/product_consult/: __init__.py  product_consult_command_model.py  product_consult_command_usecase.py  product_consult_query_model.py  product_consult_query_service.py  product_consult_query_usecase.py
app/usecase/user/: __init__.py  user_command_model.py  user_command_usecase.py  user_query_model.py  user_query_service.py  user_query_usecase.py
(+18 files in other folders)
