[tool.poetry]
name = "zebrans"
version = "1.0.0"
description = "Zebrands microservice"
authors = ["dani2898 <danielavilla2898@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"
pydantic = "^1.7.3"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
shortuuid = "^1.0.1"
psycopg2 = "^2.8.6"
alembic = "^1.6.5"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
